--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,51 @@
-/build/
+*.class
+*.war
+*.ear
+
+bin/
+build/
+out/
+target/
+
+.idea/
+*.iml
+*.ipr
+*.iws
+.classpath
+.project
+.settings/
+.vscode/
+
+# logs
+*.log
+logs/
+
+**/lib/
+**/libs/
+
+config.properties
+*.env
+
+.DS_Store
+Thumbs.db
+
+**/target/
+**/pom.xml.tag
+**/pom.xml.releaseBackup
+**/pom.xml.versionsBackup
+**/pom.xml.next
+**/release.properties
+**/dependency-reduced-pom.xml
+**/buildNumber.properties
+**/.mvn/timing.properties
+
+.gradle/
+**/build/
+
+nbproject/
+private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
